--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -14,3 +14,7 @@ IgnoreInternalEmptyHash: true
 IgnoreEmptyHref: true
 IgnoreDirs:
   - "reference/generated/kubernetes-api"
+  
+  
+  
+  hdsfgsdfsgdsfg
